--- a/style.css
+++ b/style.css
@@ -11,4 +11,10 @@ body{
     flex-direction: column;
     align-items: center;
 }
+
+
+.bar{
+    width: 10px;
+    background-color: black;
+    margin: 1.5px;
 }
